<resources>
    <string name="app_name">FirebaseBlogApp</string>
    <string name="welcome_to">Welcome to</string>
    <string name="awesome_blog">Awesome Blog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account">Need A New Account ?</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="save_changes">Save Changes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
